@@ -3,6 +3,7 @@ package io.quarkus.qute.runtime;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.Reader;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.util.List;
@@ -162,10 +163,11 @@ public class EngineProducer {
             Class<?> resolverClazz = Thread.currentThread()
                     .getContextClassLoader().loadClass(resolverClassName);
             if (Resolver.class.isAssignableFrom(resolverClazz)) {
-                return (Resolver) resolverClazz.newInstance();
+                return (Resolver) resolverClazz.getDeclaredConstructor().newInstance();
             }
             throw new IllegalStateException("Not a resolver: " + resolverClassName);
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | IllegalArgumentException
+                | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             throw new IllegalStateException("Unable to create resolver: " + resolverClassName, e);
         }
     }
